--- a/more-complex-chat-server/chat-client/src/pages/home/home.scss
+++ b/more-complex-chat-server/chat-client/src/pages/home/home.scss
@@ -1,3 +1,8 @@
-page-home {
-
+textarea {
+  width: calc(100% - 20px);
+  margin-left: 10px;
+  background-color: #fff;
+  font-size: 1.2em;
+  resize: none;
+  border: none;
 }
